<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/route_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/example_name_route"
        android:textAlignment="center"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/route_list_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/route_list_name"
        android:layout_marginTop="0dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/time_move_text" />

        <TextView
            android:id="@+id/route_list_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/time_in_hours_example" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/route_list_station"
        android:name="com.example.train_schedule.StationFragment"
        style="@style/MyRecyclerView"
        android:layout_above="@+id/route_list_footer"
        android:layout_below="@+id/route_list_info"

        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        tools:context=".main.fragments.StationListFragment"
        tools:listitem="@layout/fragment_route_item" />

    <LinearLayout
        android:id="@id/route_list_footer"
        style="@style/FooterLL">

        <Button
            android:id="@+id/route_list_btn_add_node"
            style="@style/MyButtonStyle"
            android:text="@string/add_station_text"
            android:maxWidth="120dp"/>

        <Button
            android:id="@+id/route_list_btn_cancel"
            style="@style/MyButtonStyle"
            android:text="@string/cancel_text" />

        <Button
            android:id="@+id/route_list_btn_save"
            style="@style/MyButtonStyle"
            android:text="@string/save_text" />

    </LinearLayout>
</RelativeLayout>
