<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/route_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/route_item_txt_name"
        style="@style/boldTextView"
        android:layout_marginTop="4dp"
        android:text="@string/example_name_station"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/route_item_btn_delete"
        style="@style/TransparentImageButton"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/route_item_txt_name"
        app:layout_constraintTop_toBottomOf="@+id/route_item_txt_name">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/dep_time_text"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/route_item_txt_time_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/time_example"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/arr_time_text"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/route_item_txt_time_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/time_example"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/time_parking_text"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/route_item_txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/time_in_hours_example"
            android:textAppearance="?attr/textAppearanceListItem" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>