<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/schedule_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/schedule_item_txt_name"
        style="@style/boldTextView"
        android:text="@string/example_name_route"
        android:layout_marginTop="5dp"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/schedule_item_btn_delete"
        style="@style/TransparentImageButton"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/delete" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/schedule_item_txt_name">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/dep_time_text"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/schedule_item_txt_time_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/time_example"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/arr_time_text"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/schedule_item_txt_time_arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/time_example"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/time_move_text"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/schedule_item_txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/time_in_hours_example"
            android:textAppearance="?attr/textAppearanceListItem" />
    </GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>